--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p>Serving BloxTown and surrounding districts since 1984</p>
     <nav>
       <a href="#">Home</a>
-      <a href="#">Latest News</a>
-      <a href="#">Submit a Tip</a>
-      <a href="#">About</a>
+      <a href="latest">Latest News</a>
+      <a href="submit">Submit a Tip</a>
+      <a href="about">About</a>
     </nav>
   </header>
 
