--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>🗞️ The Bloxy News</h1>
     <p>Serving BloxTown and surrounding districts since 1984</p>
     <nav>
-      <a href="#">Home</a>
+      <a href="index">Home</a>
       <a href="latest">Latest News</a>
       <a href="submit">Submit a Tip</a>
       <a href="about">About</a>
