--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>🗞️ The Bloxy News</h1>
     <p>Serving BloxTown and surrounding districts since 1984</p>
     <nav>
-      <a href="index">Home</a>
-      <a href="latest">Latest News</a>
-      <a href="submit">Submit a Tip</a>
-      <a href="about">About</a>
+      <a href="index.html">Home</a>
+      <a href="latest.html">Latest News</a>
+      <a href="submit.html">Submit a Tip</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 
