--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>The Bloxy News</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+  <body>
+  <section class="video-block">
+    <h2>🚨 Surveillance Footage — GearShift Gas Station</h2>
+    <video width="100%" height="auto" controls poster="thumbnail.jpg">
+      <source src="placeholder.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </section>
+
   <header>
     <h1>🗞️ The Bloxy News</h1>
     <p>Serving BloxTown and surrounding districts since 1984</p>
@@ -16,22 +26,14 @@
       <a href="about.html">About</a>
     </nav>
   </header>
-<body>
-  <section class="video-block">
-    <h2>🚨 Surveillance Footage — GearShift Gas Station</h2>
-    <video width="100%" height="auto" controls poster="thumbnail.jpg">
-      <source src="placeholder.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </section>
-  <body>
+
   <header>
     <h1>🗞️ The Bloxy News</h1>
     <p>Serving BloxTown and surrounding districts since 1984</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="latest.html">Latest News</a>
-      <a href="submit.html">Submit a Tip</a>
+      <a href="sumbit.html">Submit a Tip</a>
       <a href="about.html">About</a>
     </nav>
   </header>
@@ -64,4 +66,3 @@
   </footer>
 </body>
 </html>
-
