--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Bloxy News</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+
 <body>
+  <body>
   <section class="video-block">
     <h2>🚨 Surveillance Footage — GearShift Gas Station</h2>
     <video width="100%" height="auto" controls poster="thumbnail.jpg">
