--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Bloxy News</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
   <header>
     <h1>🗞️ The Bloxy News</h1>
     <p>Serving BloxTown and surrounding districts since 1984</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="latest.html">Latest News</a>
-      <a href="submit.html">Submit a Tip</a>
-      <a href="about.html">About</a>
+      <a href="#">Home</a>
+      <a href="#">Latest News</a>
+      <a href="#">Submit a Tip</a>
+      <a href="#">About</a>
     </nav>
   </header>
-<body>
+
   <main>
     <section class="featured-article">
       <h2>SEVEN GONE — GEARSHIFT GAS LINKED TO STRING OF DISAPPEARANCES</h2>
