--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <a href="about.html">About</a>
     </nav>
   </header>
-
+<section class="video-block">
+    <h2>🚨 Surveillance Footage — GearShift Gas Station</h2>
+    <video width="100%" height="auto" controls poster="thumbnail.jpg">
+      <source src="placeholder.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+  </section>
   <main>
     <section class="featured-article">
       <h2>SEVEN GONE — GEARSHIFT GAS LINKED TO STRING OF DISAPPEARANCES</h2>
