--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
 <section class="video-block">
-    <h2>🚨 Surveillance Footage — GearShift Gas Station</h2>
-    <video width="100%" height="auto" controls poster="thumbnail.jpg">
+    <h2>Introduction video</h2>
+    <video width="75%" height="auto" controls poster="thumbnail.jpg">
       <source src="placeholder.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
