--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </main>
 
   <footer>
-    <p>© 2025 The Bloxy News | Made in BloxTown, RB</p>
+    <p>© 2025 The Bloxy News | All Rights Reserved</p>
   </footer>
 </body>
 </html>
