--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section class="video-block">
     <h2>Introduction video</h2>
     <video width="75%" height="auto" controls poster="thumbnail.jpg">
-      <source src="placeholder.mp4" type="video/mp4" />
+      <source src="Placeholder.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </section>
