--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
   </section>
   <main>
     <section class="featured-article">
-      <h2>SEVEN GONE — GEARSHIFT GAS LINKED TO STRING OF DISAPPEARANCES</h2>
-      <p><strong>June 23, 2025 — Grandville, OH</strong></p>
-      <p>Emily Middleton is the 7th person to vanish near GearShift Gas in just 3 years—why is no one talking about it?</p>
+      <h2>TBD</h2>
+      <p><strong>June 23, 2025 — Town, State</strong></p>
+      <p>I've fallen and can't get up!</p>
       <a href="#">Read More →</a>
     </section>
 
     <section class="article-list">
       <article>
-        <h3>“He Knows What Happened” — Husband Accuses Clerk in Disappearance</h3>
-        <p>Jerry Middleton believes the GearShift Gas clerk is hiding something in his wife’s case...</p>
+        <h3>TBD</h3>
+        <p>TEST</p>
         <a href="#">Read Article</a>
       </article>
 
       <article>
-        <h3>GearShift Gas Issues Statement, Denies All Allegations</h3>
-        <p>The company calls the claims “baseless and harmful” amid growing protests and boycotts...</p>
+        <h3>TBD</h3>
+        <p>TEST</p>
         <a href="#">Read Article</a>
       </article>
     </section>
