--- a/latest.html
+++ b/latest.html
@@ -21,7 +21,7 @@
     <article>
       <h3>SEVEN GONE — GEARSHIFT GAS LINKED TO STRING OF DISAPPEARANCES</h3>
       <p>Emily Middleton is the 7th person to vanish near GearShift Gas since 2022. Residents demand answers.</p>
-      <a href="#">Read more →</a>
+      <a href="Testing.html">Read more →</a>
     </article>
 
     <article>
