--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>TBD</h2>
       <p><strong>June 23, 2025 — Town, State</strong></p>
       <p>I've fallen and can't get up!</p>
-      <a href="#">Read More →</a>
+      <a href="Testing.html">Read More →</a>
     </section>
 
     <section class="article-list">
