--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </section>
   <main>
     <section class="featured-article">
-      <h2>TBD</h2>
-      <p><strong>June 23, 2025 — Town, State</strong></p>
-      <p>I've fallen and can't get up!</p>
+      <h2>WOMAN VANISHES AFTER CROSSING STREET TO GAS STATION — NEVER RETURNS HOME</h2>
+      <p><strong>June 23, 2025 — BloxTown, RB</strong></p>
+      <p>Emily Middleton, 23, Reported Missing After Quick Trip to GearShift Gas</p>
       <a href="Testing.html">Read More →</a>
     </section>
     
