--- a/Testing.html
+++ b/Testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TBD</title>
+  <title>WOMAN VANISHES AFTER CROSSING STREET TO GAS STATION — NEVER RETURNS HOME</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,11 +17,17 @@
   </header>
 
   <main>
-    <h2>SEVEN GONE — GEARSHIFT GAS LINKED TO STRING OF DISAPPEARANCES</h2>
-    <p><strong>June 23, 2025 — Grandville, OH</strong></p>
-    <p>Emily Middleton is the 7th person to vanish near GearShift Gas in the last three years. Locals believe the station is hiding something. The owner denies all allegations.</p>
-    <p>Jerry Middleton, Emily’s husband, says the station clerk was acting “nervous and defensive” the night she disappeared. Surveillance footage from that night has not been released to police.</p>
-    <p>Several similar disappearances have occurred in the surrounding county — all involving people who visited the GearShift location shortly before vanishing.</p>
+    <h2>Emily Middleton, 23, Reported Missing After Quick Trip to GearShift Gas</h2>
+    <p><strong>June 23, 2025 — BloxTown, RB</strong></p>
+    <p>A routine walk across the street turned into a baffling and unsettling mystery after Emily Middleton, 23, vanished Sunday evening just moments after entering the GearShift Gas station across from her home.</p>
+    <p>Emily, described as friendly, artistic, and deeply connected to her family, lived in a small rental cottage on Pine Hollow Road — directly opposite the neon glow of the 24-hour GearShift Gas. Around 6:10 PM, she left her house to grab a drink and a snack, telling her husband: "Running to GearShift, be back in 10." She never returned.</p>
+    <p>Surveillance footage shows Emily entering the convenience store at 6:12 PM and purchasing a bottle of tea. The cashier on duty, who wishes to remain unnamed, said Emily “looked over her shoulder more than once” and seemed “uneasy, like she felt watched.”</p>
+<p>After leaving the store at 6:17 PM, Emily is seen on camera stepping into the parking lot… and then, nothing. The final seconds of the tape are corrupted. She never made it the 200 feet back across the road to her house.</p>
+  <p>“Emily was right across the street from safety,” said her mother, Ellen Middleton. “She should have been home in minutes. How does someone disappear in plain sight?”</p>
+<p>GearShift Gas, a popular but quirky stop known for its vintage theme and mascot Gary the Gear, has declined to comment.</p>
+<p>Emily’s disappearance has gripped the town with fear and speculation. Some whisper it was an abduction. Others think something more… unnatural may be at play. </p>
+<p>Emily Middleton is 5'6", with pink hair, brown eyes, and was last seen wearing a sky-blue hoodie, black leggings, and white sneakers.</p>
+    <p>Anyone with information is urged to call the BloxTown Police Tip Line at (###) ###-####.</p>
   </main>
 
   <footer>
